# how-to-provenance

./: README.md
authz-example/: README.md  build.gradle.kts  settings.gradle.kts
authz-example/gradle/: libs.versions.toml
bilateral-trade-example/: .gitignore  Cargo.toml  Makefile  README.md
bilateral-trade-example/examples/: bilateral.sh  create-base.sh  schema.rs
bilateral-trade-example/examples/kotlin/scope-exchange/: README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
bilateral-trade-example/examples/kotlin/scope-exchange/gradle/: libs.versions.toml
bilateral-trade-example/examples/kotlin/scope-exchange/src/main/kotlin/: MarkerCreator.kt  MarkerOwnedScopeExchange.kt  ScopeCreator.kt  ScopeExchange.kt  Util.kt
bilateral-trade-example/schema/: ask_order.json  bid_order.json  contract_info.json  execute_msg.json  instantiate_msg.json  query_msg.json
bilateral-trade-example/src/: contract.rs  contract_info.rs  error.rs  lib.rs  msg.rs  state.rs
create-nft-example/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
create-nft-example/gradle/: libs.versions.toml
create-scope-nft/: README.md  build.gradle.kts
event-stream-example/: README.md  build.gradle.kts  settings.gradle.kts
event-stream-example/gradle/: libs.versions.toml
hdwallet-example/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
hdwallet-example/gradle/: libs.versions.toml
my-first-smart-contract/: Cargo.toml  README.md
my-first-smart-contract/examples/: schema.rs
my-first-smart-contract/schema/: execute_msg.json  init_msg.json
my-first-smart-contract/src/: contract.rs  error.rs  msg.rs  state.rs
name-service-dapp/: .gitignore  README.md  package-lock.json  tsconfig.json
name-service-dapp-example/: README.md  package-lock.json  package.json
name-service-dapp-example/contract/: Makefile  README.md
name-service-dapp-example/contract/examples/: schema.rs
name-service-dapp-example/contract/schema/: execute_msg.json  migrate_msg.json  query_msg.json
name-service-dapp-example/contract/src/: contract.rs  lib.rs
name-service-dapp-example/envoy/: envoy.yaml  start_envoy.sh
name-service-dapp-example/public/: manifest.json
name-service-dapp-example/src/: App.js  base.css  index.js
name-service-dapp-example/src/Components/: index.js
name-service-dapp-example/src/consts/: allActions.js  colors.ts  index.js  network.ts
name-service-dapp-example/src/models/: ContractBase.ts  NameContract.ts  index.ts
name-service-dapp-example/src/services/: NameContractService.ts  WasmService.ts
name-service-dapp-example/src/util/: ConversionUtil.ts
name-service-dapp/contract/: .gitignore  Cargo.toml
name-service-dapp/contract/.cargo/: config
name-service-dapp/contract/schema/: init_msg.json  state.json
name-service-dapp/public/: index.html
p8e-contract-sdk-example/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
p8e-contract-sdk-example/application/: build.gradle.kts
p8e-contract-sdk-example/contract/: build.gradle.kts
p8e-contract-sdk-example/docker/: docker-compose.yaml
p8e-contract-sdk-example/proto/: build.gradle.kts
provenance-contract-migration-example/: .gitignore  Cargo.toml  Makefile  README.md
provenance-contract-migration-example/examples/: schema.rs
provenance-contract-migration-example/schema/: init_msg.json  migrate_msg.json  query_msg.json
provenance-contract-migration-example/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  types.rs  version_info.rs
provenance-smart-contract-example/: .gitignore  .gitpod.Dockerfile  Cargo.toml  Makefile  README.md  rustfmt.toml
provenance-smart-contract-example/examples/: schema.rs
provenance-smart-contract-example/schema/: execute_msg.json  init_msg.json
provenance-smart-contract-example/src/: contract.rs  state.rs
(+93 files in other folders)
