[package]
name = "bilateral-trade-example"
version = "1.0.0-beta"
authors = ["Ken Talley <ktalley@figure.com>", "Jake Schwartz <jschwartz@figure.com>", "Pierce Trey <ptrey@figure.com>"]
edition = "2018"

exclude = [
  "bilateral_exchange.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "=1.0.0", features = ["staking"] }
cosmwasm-storage = { version = "=1.0.0" }
cw-storage-plus = { version = "0.12.1" }
provwasm-std = { version = "=1.0.0" }
schemars = "=0.8.3"
serde = { version = "=1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "=1.0.26" }

[dev-dependencies]
cosmwasm-schema = { version = "=1.0.0" }
provwasm-mocks = { version = "=1.0.0" }
