[package]
name = "provenance-contract-migration-example"
version = "0.0.2"
authors = ["Jake Schwartz <jschwartz@figure.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""

[dependencies]
provwasm-std = { version = "1.0.0-beta" }
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta" }
cw-storage-plus = "0.12.1"
cw2 = "0.12.1"
schemars = "0.8.3"
semver = "1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
serde-json-wasm = { version = "0.3.1" }
thiserror = { version = "1.0.26" }

[dev-dependencies]
provwasm-mocks = { version = "1.0.0-beta" }
cosmwasm-schema = { version = "1.0.0-beta" }
